--- a/.gitignore
+++ b/.gitignore
@@ -113,7 +113,7 @@ dist
 # DynamoDB Local files
 .dynamodb/
 
-# TernJS port file
+# TernJS port
 .tern-port
 
 # Stores VSCode versions used for testing VSCode extensions
